--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class="container">
-        <h1 class="title">Consulta de CEP</h1>
+        <h1 class="title">Consulte seu CEP</h1>
         <div class="row">
             <div class="inputbox">
                 <input type="text" id="cep" onkeypress="return BlockChar(event)" maxlength="8" required>
